# Sentiment-Enhanced-Demand-Forecasting

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  sentiment-demand-forecaster-plan.md
.streamlit/: config.toml
api/: main.py
app/: dashboard.py
configs/: lstm_params.yaml  xgboost_params.yaml
data/: fetch_quantitative.py  fetch_sentiment.py
evaluation/: btc_usd_evaluation.json  evaluate.py
features/: build_features.py
models/: train_lstm.py  train_xgboost.py
models/saved/: btc_usd_lstm_results.json  btc_usd_xgb_all_features_feature_importance.csv  btc_usd_xgb_no_sentiment_feature_importance.csv  btc_usd_xgb_results.json
nlp/: sentiment_pipeline.py
notebooks/: 01_eda.ipynb  02_model_comparison.ipynb  03_error_analysis.ipynb
