[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sentiment-demand-forecaster"
version = "0.1.0"
description = "Predict crypto price direction by combining market data with social sentiment"
requires-python = ">=3.10"

dependencies = [
    # Data
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "pyarrow>=16.0",

    # NLP / Sentiment
    "transformers>=4.41",
    "torch>=2.3",
    "praw>=7.7",

    # ML
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "optuna>=3.6",

    # Visualization / Notebooks
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "jupyter>=1.0",

    # API / Dashboard
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "streamlit>=1.35",

    # Config
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
